--- a/app/posts/code/azure-functions-getting-started.mdx
+++ b/app/posts/code/azure-functions-getting-started.mdx
@@ -33,7 +33,11 @@ There are 4 pieces that make up an Azure Function, as illustrated well by the Az
 3. The actual function code
 4. Outputs
 
-<img src="/static/images/blog/azure-funcs/azure-func-integration.png" width="100%" style="margin-top: 30px" />
+<img
+  src="/static/images/blog/azure-funcs/azure-func-integration.png"
+  width="100%"
+  style={{marginTop: 30}}
+/>
 
 #### Trigger
 
